--- a/TemplateBaseMicroservice.Api/appsettings.json
+++ b/TemplateBaseMicroservice.Api/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cnBD": "",
+    "cnBD": "Server=132.16.0.49;Database=BDDatos;User Id=Prueba;Password=Prueba;TrustServerCertificate=true;",
     "databaseProvider": "Microsoft.Data.SqlClient"
-  },
-  "nombrePublicacion": "TemplateBase"
+  }
 }
