Agregando el servicio del log, con servicio a azure table storage para el servicio de producción

--- a/TemplateBaseMicroservice.Exceptions/TemplateBaseMicroservice.Exceptions.csproj
+++ b/TemplateBaseMicroservice.Exceptions/TemplateBaseMicroservice.Exceptions.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TemplateBaseMicroservice.Entities\TemplateBaseMicroservice.Entities.csproj" />
+    <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
