--- a/TemplateBaseMicroservice.Api/appsettings.json
+++ b/TemplateBaseMicroservice.Api/appsettings.json
@@ -1,13 +1,50 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "cnBD": "Server=132.16.0.49;Database=BDDatos;User Id=Prueba;Password=Prueba;TrustServerCertificate=true;",
     "databaseProvider": "Microsoft.Data.SqlClient"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.AzureTableStorage" ],
+    "MinimumLevel": {
+      "Default": "Error",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "AzureTableStorage",
+        "Args": {
+          "storageTableName": "trilceLog",
+          "connectionString": "",
+          "format": "json",
+          "propertyColumns": [
+            "EventTime",
+            "Level",
+            "MessageTemplate",
+            "RenderedMessage",
+            "Data",
+            "ActionName",
+            "RequestId",
+            "RequestPath",
+            "Application",
+            "Environment",
+            "Checked",
+            "Payload",
+            "Params",
+            "Method"
+
+          ]
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "templateBase"
+    }
   }
 }
